--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^5.0.4",
     "firebase-tools": "^3.18.6",
     "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
@@ -42,7 +43,7 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^2.0.3",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
